; ModuleID = '/home/carl/AnghaBench/postgres/src/bin/psql/extr_command.c_exec_command_errverbose.c'
source_filename = "/home/carl/AnghaBench/postgres/src/bin/psql/extr_command.c_exec_command_errverbose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64 }

@pset = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@PQERRORS_VERBOSE = common dso_local global i32 0, align 4
@PQSHOW_CONTEXT_ALWAYS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"out of memory\00", align 1
@.str.2 = private unnamed_addr constant [28 x i8] c"There is no previous error.\00", align 1
@PSQL_CMD_SKIP_LINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @exec_command_errverbose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @exec_command_errverbose(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %31

8:                                                ; preds = %2
  %9 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %27

11:                                               ; preds = %8
  %12 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @pset, i32 0, i32 0), align 8
  %13 = load i32, i32* @PQERRORS_VERBOSE, align 4
  %14 = load i32, i32* @PQSHOW_CONTEXT_ALWAYS, align 4
  %15 = call i8* @PQresultVerboseErrorMessage(i64 %12, i32 %13, i32 %14)
  store i8* %15, i8** %5, align 8
  %16 = load i8*, i8** %5, align 8
  %17 = icmp ne i8* %16, null
  br i1 %17, label %18, label %23

18:                                               ; preds = %11
  %19 = load i8*, i8** %5, align 8
  %20 = call i32 @pg_log_error(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %19)
  %21 = load i8*, i8** %5, align 8
  %22 = call i32 @PQfreemem(i8* %21)
  br label %26

23:                                               ; preds = %11
  %24 = call i32 @_(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %25 = call i32 @puts(i32 %24)
  br label %26

26:                                               ; preds = %23, %18
  br label %30

27:                                               ; preds = %8
  %28 = call i32 @_(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %29 = call i32 @puts(i32 %28)
  br label %30

30:                                               ; preds = %27, %26
  br label %31

31:                                               ; preds = %30, %2
  %32 = load i32, i32* @PSQL_CMD_SKIP_LINE, align 4
  ret i32 %32
}

declare dso_local i8* @PQresultVerboseErrorMessage(i64, i32, i32) #1

declare dso_local i32 @pg_log_error(i8*, i8*) #1

declare dso_local i32 @PQfreemem(i8*) #1

declare dso_local i32 @puts(i32) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
